--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -1,59 +1,52 @@
 name: Terraform CI/CD
 
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
   workflow_dispatch:
     inputs:
-      logLevel:
-        description: 'Log level'
+      apply:
+        description: 'Executar o terraform apply?'
         required: true
-        default: 'warning'
+        default: 'false'
         type: choice
         options:
-          - info
-          - warning
-          - debug
+                - true
+                 - false  
+permissions:
+  id-token: write
+  contents: read
 
 jobs:
-  validate:
-    name: Terraform validate
+  job1:
+    name: Terraform CI
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5.0.0
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
         with:
-          terraform_version: 1.5.0
+          terraform_version: "1.8.0" # Use versão compatível
+
+
+      - name: "Configure AWS Credentials" 
+        uses: aws-actions/configure-aws-credentials@v5.1.0
+        with:
+          role-to-assume: arn:aws:iam::050912029223:role/GithubInfraRole
+          aws-region: us-east-2
+
+      - name: HashiCorp - Setup Terraform
+        uses: hashicorp/setup-terraform@v3.1.2
 
       - name: Terraform Init
-        run: terraform init -input=false
+        run: terraform init 
 
       - name: Terraform Validate
-        run: terraform validate
-
-  plan:
-    name: Terraform plan
-    runs-on: ubuntu-latest
-    needs: validate
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v2
-        with:
-          terraform_version: 1.5.0
-
-      - name: Terraform Init
-        run: terraform init -input=false
+        run: terraform validate 
 
       - name: Terraform Plan
-        run: terraform plan -out=tfplan -input=false
+        run: terraform plan -out=tfplan 
 
-      - name: Show plan
-        run: terraform show -no-color tfplan
+      - name: Terraform Apply 
+        run: terraform apply -auto-approve tfplan
+        if: github.event.inputs.apply == 'true'
