feat: add workflow

--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -1,23 +1,24 @@
 name: Terraform CI/CD
 
 on:
-  workflow_dispatch:
+  workflow_dispatch: # Allows manual triggering of the workflow
     inputs:
       apply:
         description: 'Executar o terraform apply?'
         required: true
         default: 'false'
-        type: choice
+        type: choice #Poderia ser do tipo boolean, mas escolhi choice para deixar mais amigável
         options:
-            - true
-                 - false  
+          - true
+            - false
+
 permissions:
   id-token: write
   contents: read
 
 jobs:
   job1:
-    name: Terraform CI
+    name: Terraform 
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
